# financer-api

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  test_expenses.http
schema/: V01_01__initial_schema.sql  V01_02__view_and_trigger.sql  V01_03__month_trigger.sql  V01_04__bill_trigger.sql  V01_05__bill_trigger_for_month.sql
src/database/: db.py  subscription.py
src/errors/: UserError.py
src/jsonapi/: json_api.py
src/routers/: bill_router.py  expenses.py  expenses_router.py  income_router.py  months_router.py
src/schemas/: bill_vo.py  database.py  expense_vo.py  income_vo.py  month_vo.py
src/services/: bill_service.py  expenses.py  expenses_service.py  income_service.py  month_service.py
src/settings/: logging.py  settings.py
